Fix unallocated space calculation in the presence of LVM RAID partitions.

BUG: 396776